[project]
name = "insurance-claim-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
Dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "python-dotenv",
  "langchain",
  "langchain-core",
  "langchain-groq",
  "langchain-google-genai",
  "langchain-text-splitters",
  "langmem",
  "chromadb",
  "streamlit",
  "requests",
  "email-validator",
  "google-genai",
  # Optional local embedding stack (disabled to keep EC2 image size low):
  # "sentence-transformers",
  # "torch",
]
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-text-splitters>=1.1.2",
    "langmem>=0.0.30",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "requests>=2.34.2",
    "streamlit>=1.59.0",
    "uvicorn>=0.50.2",
]

[tool.uv]
package = false

# Optional torch CPU index (enable only if uncommenting "torch" above):
# [tool.uv.sources]
# torch = { index = "pytorch-cpu" }
#
# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# explicit = true

[dependency-groups]
dev = [
  "playwright>=1.58.0",
  "pytest",
]

